finalizando segundo dia

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -267,6 +267,16 @@ form button:hover {
 form button:active {
   background-color: var(--black-75);
 }
+form button:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+form button:disabled:hover, form button:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
 form button:hover {
   background-color: var(--green-hover);
 }
@@ -396,6 +406,16 @@ header.page-title hr {
 .page aside footer button:active {
   background-color: var(--black-75);
 }
+.page aside footer button:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+.page aside footer button:disabled:hover, .page aside footer button:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
 .page aside footer button svg {
   transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
@@ -482,6 +502,16 @@ header.page-title hr {
 .page footer.fixed button:active, .page footer.fixed a:active {
   background-color: var(--black-75);
 }
+.page footer.fixed button:disabled, .page footer.fixed a:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+.page footer.fixed button:disabled:hover, .page footer.fixed button:disabled:active, .page footer.fixed a:disabled:hover, .page footer.fixed a:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
 .page footer.fixed button:hover, .page footer.fixed a:hover {
   background-color: var(--gray-hover);
 }
@@ -512,6 +542,16 @@ header.page-title hr {
 }
 .page footer.fixed button[type=submit]:active, .page footer.fixed a.black:active {
   background-color: var(--black-75);
+}
+.page footer.fixed button[type=submit]:disabled, .page footer.fixed a.black:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+.page footer.fixed button[type=submit]:disabled:hover, .page footer.fixed button[type=submit]:disabled:active, .page footer.fixed a.black:disabled:hover, .page footer.fixed a.black:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
 }
 .page footer.fixed button[type=submit]:hover, .page footer.fixed a.black:hover {
   background-color: var(--black-hover);
@@ -547,6 +587,16 @@ header.page-title hr {
 .page.blue footer.fixed button[type=submit]:active, .page.blue footer.fixed a.black:active {
   background-color: var(--black-75);
 }
+.page.blue footer.fixed button[type=submit]:disabled, .page.blue footer.fixed a.black:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+.page.blue footer.fixed button[type=submit]:disabled:hover, .page.blue footer.fixed button[type=submit]:disabled:active, .page.blue footer.fixed a.black:disabled:hover, .page.blue footer.fixed a.black:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
 .page.blue footer.fixed button[type=submit]:hover, .page.blue footer.fixed a.black:hover {
   background-color: var(--blue-hover);
 }
@@ -580,6 +630,16 @@ header.page-title hr {
 }
 .page.green footer.fixed button[type=submit]:active, .page.green footer.fixed a.black:active {
   background-color: var(--black-75);
+}
+.page.green footer.fixed button[type=submit]:disabled, .page.green footer.fixed a.black:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+.page.green footer.fixed button[type=submit]:disabled:hover, .page.green footer.fixed button[type=submit]:disabled:active, .page.green footer.fixed a.black:disabled:hover, .page.green footer.fixed a.black:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
 }
 .page.green footer.fixed button[type=submit]:hover, .page.green footer.fixed a.black:hover {
   background-color: var(--green-hover);
@@ -683,6 +743,16 @@ header.page-title hr {
 .calendar .month button:active {
   background-color: var(--black-75);
 }
+.calendar .month button:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+.calendar .month button:disabled:hover, .calendar .month button:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
 .calendar .month nav button {
   min-width: 50px;
 }
@@ -727,6 +797,9 @@ header.page-title hr {
 }
 .calendar .days li:hover {
   background-color: var(--gray-7);
+}
+.calendar .days li.month-prev, .calendar .days li.month-next {
+  color: var(--gray-2);
 }
 .calendar .days li.active {
   background-color: var(--blue);
@@ -916,6 +989,16 @@ header.page-title hr {
 }
 #header .menu .btn-register:active {
   background-color: var(--black-75);
+}
+#header .menu .btn-register:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+#header .menu .btn-register:disabled:hover, #header .menu .btn-register:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
 }
 #header .menu .btn-register:hover {
   background-color: var(--green-hover);
@@ -1185,6 +1268,16 @@ header.page-title hr {
 #home > header a:active {
   background-color: var(--black-75);
 }
+#home > header a:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+#home > header a:disabled:hover, #home > header a:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
 #home > header a:hover {
   background-color: var(--white);
   color: var(--black);
@@ -1309,6 +1402,16 @@ header.page-title hr {
 }
 #service > div a:active {
   background-color: var(--black-75);
+}
+#service > div a:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+#service > div a:disabled:hover, #service > div a:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
 }
 #service > div a:hover {
   background-color: var(--green-hover);
@@ -1696,6 +1799,16 @@ header.page-title hr {
 #schedules main > div ul li button:active {
   background-color: var(--black-75);
 }
+#schedules main > div ul li button:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+#schedules main > div ul li button:disabled:hover, #schedules main > div ul li button:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
 #schedules main > div ul li button:hover {
   background-color: var(--red-hover);
 }
@@ -1787,6 +1900,16 @@ header.page-title hr {
 #time-options .options label span:active {
   background-color: var(--black-75);
 }
+#time-options .options label span:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+#time-options .options label span:disabled:hover, #time-options .options label span:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
 #time-options .options label input {
   display: none;
 }
@@ -1814,6 +1937,16 @@ header.page-title hr {
 }
 #time-options .options label input:checked + span:active {
   background-color: var(--black-75);
+}
+#time-options .options label input:checked + span:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+#time-options .options label input:checked + span:disabled:hover, #time-options .options label input:checked + span:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
 }
 #time-options .options label input:checked + span:hover {
   background-color: var(--blue-hover);
@@ -2024,6 +2157,16 @@ header.page-title hr {
 }
 #schedules-complete main footer.fixed a:active {
   background-color: var(--black-75);
+}
+#schedules-complete main footer.fixed a:disabled {
+  opacity: 0.5;
+  cursor: no-drop;
+  background-color: var(--gray-3);
+  color: var(--dark-0);
+}
+#schedules-complete main footer.fixed a:disabled:hover, #schedules-complete main footer.fixed a:disabled:active {
+  background-color: var(--gray-3);
+  color: var(--dark-0);
 }
 #schedules-complete main footer.fixed a:hover {
   background-color: var(--green-hover);
